# DeepGEMM

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_sgl_deep_gemm.sh  setup.py
.github/scripts/: build.sh  test.sh
.github/workflows/: _build.yml  _build_in_container.yml  publish.yml  release_sgl_deepgemm.yml
csrc/: python_api.cpp  tvm_ffi_api.cpp
csrc/apis/: attention.hpp  einsum.hpp  gemm.hpp  hyperconnection.hpp  layout.hpp  mega.hpp  runtime.hpp  sm90_mega.hpp
csrc/indexing/: main.cu
csrc/jit/: compiler.hpp  device_runtime.hpp  handle.hpp  kernel_runtime.hpp
csrc/jit_kernels/heuristics/: common.hpp  mega_moe.hpp  sm100.hpp  sm90.hpp  sm90_mega_moe.hpp
csrc/jit_kernels/impls/: runtime_utils.hpp  sm100_bf16_gemm.hpp  sm100_bmk_bnk_mn.hpp  sm100_fp4_mega_moe.hpp  sm100_fp8_fp4_gemm_1d1d.hpp  sm100_fp8_fp4_mega_moe.hpp  sm100_fp8_gemm_1d1d.hpp  sm100_fp8_gemm_1d2d.hpp  sm100_mega_moe_pre_dispatch.hpp  sm100_tf32_hc_prenorm_gemm.hpp  sm90_bf16_gemm.hpp  sm90_bmk_bnk_mn.hpp  sm90_fp8_gemm_1d1d.hpp  sm90_fp8_gemm_1d2d.hpp  sm90_fp8_mega_moe.hpp  sm90_tf32_hc_prenorm_gemm.hpp  smxx_clean_logits.hpp  smxx_cublaslt.hpp  smxx_fp8_fp4_paged_mqa_logits.hpp  smxx_fp8_mqa_logits.hpp  smxx_fp8_paged_mqa_logits.hpp  smxx_layout.hpp
csrc/utils/: compatibility.hpp  exception.hpp  layout.hpp  math.hpp  system.hpp  tensor_view.hpp  torch_compat.hpp
deep_gemm/: __init__.py  config.py  dispatch.py
deep_gemm/include/deep_gemm/comm/: barrier.cuh
deep_gemm/include/deep_gemm/common/: math.cuh  scheduler.cuh  sm100_utils.cuh  sm90_utils.cuh  types.hpp  utils.cuh
deep_gemm/jit/: __init__.py  compiler.py  runtime.py
deep_gemm/jit/scripts/: __init__.py
deep_gemm/jit_kernels/: __init__.py  runtime.py
deep_gemm/jit_kernels/heuristics/: __init__.py  common.py  sm100_heuristics.py
deep_gemm/jit_kernels/impls/: __init__.py  sm100_fp8_gemm_1d1d.py
deep_gemm/legacy/: a_fused_m_grouped_gemm.py  b_fused_k_grouped_gemm.py
deep_gemm/mega/: __init__.py
deep_gemm/testing/: __init__.py  bench.py  numeric.py
deep_gemm/utils/: __init__.py  dist.py  layout.py  math.py
indexing/: main.cu
scripts/: quick_plot_pm.py  run_ncu_mega_moe.sh  run_ncu_mega_moe_sm90.sh
sgl_deep_gemm/: LICENSE  README.md  __init__.py  pyproject.toml  run_tests.sh
sgl_deep_gemm/tests/: test_attention.py  test_einsum.py  test_fp8_fp4.py  test_layout.py  test_lazy_init.py  test_mega_moe_l1_fp4_accuracy.py  test_sanitizer.py
tests/: bench_mega_moe_sm90.py  generators.py  test_attention.py  test_bf16.py  test_core.py  test_einsum.py  test_fp8.py  test_fp8_fp4.py  test_legacy.py  test_mega_moe.py  test_mega_moe_hopper.py  test_mega_moe_l1_fp4_accuracy.py  test_mega_moe_l1_sentinel.py  test_mega_moe_pre_dispatch.py  test_mega_moe_sm90.py  test_sgl_deep_gemm_smoke.py
(+27 files in other folders)
